# paleo-bench

./: .env.example  .gitignore  .prettierrc  README.md  config.example.toml  config.toml  main.py  package.json  pyproject.toml  svelte.config.js  test.toml  vite.config.ts
.github/workflows/: deploy-pages.yml
data/grk_byz/: GA1_72v.txt  GA1_73r.txt  GA2523_190r.txt  GA2523_195v.txt  GAL2010_40v.txt  GAL587_p66.txt  GAL60_64r.txt
paleo_bench/: __main__.py  config.py  iiif.py  metrics.py  results.py  runner.py  vision.py
scripts/: generate-results-version.mjs  split-results-for-site.mjs
src/: app.html
src/lib/: iiif.ts  results-loader.ts  theme.svelte.ts  types.ts  utils.ts
src/lib/components/: CircularGauge.svelte  ModelSelectorOptions.svelte  ThemeToggle.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts  layout.css
src/routes/compare/: +page.svelte  +page.ts
static/: results.json  results.version.json
static/site-data/: compare-index.json  summary.json
static/site-data/samples/: 0dba0b9d5863.json  6ada467828f0.json  7393ad297171.json  c57dc0c3d7e9.json  c8fac9323b3a.json  d5388c9df8e2.json  d91daf1c2f3f.json  eae1408cd5a5.json
tests/: test_cli_flags.py  test_config_side.py  test_iiif.py  test_results_resume.py  test_runner_resume.py  test_vision.py
